# Multi-doc-rag-llava-streamlit

./: README.md  answer_synthesis.py  main.py  pyproject.toml  vectorDB.py
api/: app.py
services/: llava_service.py  pdf_service.py  vector_store.py
