[project]
name = "chai-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "streamlit>=1.49.1",
    "unstructured[pdf]>=0.18.14",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.0",
    "pillow>=10.4.0",
    "sentence-transformers>=3.2.1",
    "python-multipart>=0.0.17",
    "requests>=2.32.3",
]
